// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HtmlAppBackend set_app_output should render the most recent output when the app is setup 1`] = `
Object {
  "appId": "testPortal",
  "type": "update_html_app",
  "updates": Array [
    Object {
      "addedNodes": Array [
        Object {
          "__id": "4",
          "attributes": Array [],
          "childNodes": Array [
            Object {
              "__id": "5",
              "data": "Hello",
              "nodeType": 3,
            },
          ],
          "namespace": "http://www.w3.org/1999/xhtml",
          "nodeName": "h1",
          "nodeType": 1,
          "style": Object {},
        },
      ],
      "attributeName": undefined,
      "attributeNamespace": undefined,
      "listenerDelta": undefined,
      "listenerName": undefined,
      "nextSibling": undefined,
      "oldValue": undefined,
      "previousSibling": undefined,
      "removedNodes": Array [],
      "target": Object {
        "__id": "testPortal",
        "attributes": Array [],
        "childNodes": Array [
          Object {
            "__id": "4",
            "attributes": Array [],
            "childNodes": Array [
              Object {
                "__id": "5",
                "data": "Hello",
                "nodeType": 3,
              },
            ],
            "namespace": "http://www.w3.org/1999/xhtml",
            "nodeName": "h1",
            "nodeType": 1,
            "style": Object {},
          },
        ],
        "nodeName": "BODY",
        "nodeType": 1,
        "style": Object {},
      },
      "type": "childList",
    },
  ],
  Symbol(UNMAPPABLE): true,
}
`;

exports[`HtmlAppBackend set_app_output should render the output as a preact component 1`] = `
Object {
  "appId": "testPortal",
  "type": "update_html_app",
  "updates": Array [
    Object {
      "addedNodes": Array [
        Object {
          "__id": "2",
          "attributes": Array [],
          "childNodes": Array [
            Object {
              "__id": "3",
              "data": "Hello",
              "nodeType": 3,
            },
          ],
          "namespace": "http://www.w3.org/1999/xhtml",
          "nodeName": "h1",
          "nodeType": 1,
          "style": Object {},
        },
      ],
      "attributeName": undefined,
      "attributeNamespace": undefined,
      "listenerDelta": undefined,
      "listenerName": undefined,
      "nextSibling": undefined,
      "oldValue": undefined,
      "previousSibling": undefined,
      "removedNodes": Array [],
      "target": Object {
        "__id": "testPortal",
        "attributes": Array [],
        "childNodes": Array [
          Object {
            "__id": "2",
            "attributes": Array [],
            "childNodes": Array [
              Object {
                "__id": "3",
                "data": "Hello",
                "nodeType": 3,
              },
            ],
            "namespace": "http://www.w3.org/1999/xhtml",
            "nodeName": "h1",
            "nodeType": 1,
            "style": Object {},
          },
        ],
        "nodeName": "BODY",
        "nodeType": 1,
        "style": Object {},
      },
      "type": "childList",
    },
  ],
  Symbol(UNMAPPABLE): true,
}
`;
